--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -271,9 +271,15 @@ h1,h2,h3,h4,h5
         background: #1a1a1a;
         text-align: center;
     }
-#portfolio h2
+#portfolio .portfolio-thumb .portfolio-overlay h4
     {
-        padding-bottom: 30px;
+        font-size: 2vw;
+        padding:auto;
+    }
+#portfolio .portfolio-thumb .portfolio-overlay h5
+    {
+        font-size: 1.2vw;
+        padding: auto;
     }
 #portfolio .portfolio-thumb
     {
@@ -288,13 +294,16 @@ h1,h2,h3,h4,h5
         left: 0;
         right: 0;
         bottom: 0;
+        text-align: center;
         opacity: 0;
         width: 100%;
         height: 100%;
         position: absolute;
-        padding-top: 60px;
+        padding: 1vw;
         transition: all 0.4s ease-in-out;
     }
+
+
 
 
 #portfolio .portfolio-thumb:hover .portfolio-overlay
