--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -271,6 +271,10 @@ h1,h2,h3,h4,h5
         background: #1a1a1a;
         text-align: center;
     }
+#portfolio h2
+    {
+        margin-bottom: 40px;
+    }
 #portfolio .portfolio-thumb .portfolio-overlay h4
     {
         font-size: 2vw;
